Mon Aug 25 20:15:50 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(fole_s_connect, fole_initialize): raise a
	  security error with the tainted string object.
	* ext/win32ole/win32ole_event.c(ev_advise): ditto.
	* test/win32ole/test_win32ole.rb(test_s_new_exc_svr_tainted,
	  test_s_new_exc_host_tainted): ditto.
	* test/win32ole/test_win32ole_event.rb(test_s_new_exc_tainted): ditto.

Mon Aug 25 12:56:54 2014  Ivan Korunkov  <ivankorunkov@ya.ru>

	* lib/logger.rb (format_datetime): use "%6N" to show microsecond.
	  [Fix GH-704]

Mon Aug 25 11:02:07 2014  Eric Wong  <e@80x24.org>

	* vm_core.h (rb_iseq_location_t): change first_lineno type to VALUE
	* iseq.c (rb_iseq_build_for_ruby2cext): update based on argument

Sun Aug 24 16:14:46 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/e2mmap.rb: remove needless instance variables.
	* lib/irb.rb: ditto.
	* lib/irb/**/*.rb: ditto.
	* lib/shell.rb: ditto.

Sun Aug 24 12:44:26 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_complex.rb: removed needless conditions.
	* test/ruby/test_rational.rb: ditto.

Sun Aug 24 11:47:39 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_rational.rb: fixed indent.

Sun Aug 24 11:44:11 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_rational.rb: remove commented-out code.

Sun Aug 24 11:09:29 2014  Eric Wong  <e@80x24.org>

	* lib/benchmark.rb (measure): reduce allocations as in r47260

Sun Aug 24 10:35:54 2014  Pete Higgins  <pete@peterhiggins.org>

	* lib/benchmark.rb (module Benchmark): define BENCHMARK_CLOCK
	  (realtime): use Process.clock_gettime(BENCHMARK_CLOCK)
	  Reduces allocations to improve performance [Feature #10165]

	* test/benchmark/test_benchmark.rb (test_realtime_output): new test

Fri Aug 22 20:23:54 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_fstring): fix condition (easy to cause infinite loop!).

Fri Aug 22 20:07:43 2014  Koichi Sasada  <ko1@atdot.net>
